--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
     "i18next": "^23.16.6",
+    "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.1.1",
